--- a/packages.config
+++ b/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="LiveCharts" version="0.9.7" targetFramework="net48" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net48" />
+  <package id="MathNet.Numerics" version="5.0.0" targetFramework="net48" />
   <package id="OpenTK" version="3.1.0" targetFramework="net48" />
   <package id="OpenTK.GLControl" version="3.1.0" targetFramework="net48" />
   <package id="OxyPlot.Core" version="2.1.2" targetFramework="net48" />
